--- a/src/lib/radio/style.css
+++ b/src/lib/radio/style.css
@@ -1,37 +1,37 @@
-.WuiRadio {
+.w-radio {
   align-items: center;
   display: flex;
   flex-direction: row;
   position: relative;
 }
 
-.WuiRadio__thumb {
+.w-radio__thumb {
   cursor: pointer;
   display: block;
 }
 
-.WuiRadio input:checked+.WuiRadio__thumb {
-  --WuiRadio-thumb-display: block;
+.w-radio input:checked+.w-radio__thumb {
+  --w-radio-thumb-display: block;
 }
 
-.WuiRadio input:checked+.WuiRadio__thumb.WuiColor-neutral {
-  --WuiColor-bg: var(--color-primary-5) !important;
+.w-radio input:checked+.w-radio__thumb.w-neutral {
+  --w-color-bg: var(--color-primary-5) !important;
 }
 
-.WuiRadio:hover input:not(:checked)+.WuiRadio__thumb {
-  box-shadow: inset 0 0 0 0.5px var(--WuiColor-bg);
+.w-radio:hover input:not(:checked)+.w-radio__thumb {
+  box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
 }
 
-.WuiRadio__thumb::after {
-  background-color: var(--WuiColor-bg);
+.w-radio__thumb::after {
+  background-color: var(--w-color-bg);
   border-radius: inherit;
   content: '';
-  display: var(--WuiRadio-thumb-display, none);
+  display: var(--w-radio-thumb-display, none);
   height: 100%;
   transition: transform 0.2s ease-in-out;
   width: 100%;
 }
 
-.WuiRadio__thumb.WuiVariant-solid::after {
-  background-color: var(--WuiColor-on-bg);
+.w-radio__thumb.w-solid::after {
+  background-color: var(--w-color-on-bg);
 }
