--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -120,7 +120,13 @@
   margin: 0;
   outline: none;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  scrollbar-color: var(--color-neutral-2) var(--color-neutral-0);
+  scrollbar-width: thin;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+  scrollbar-gutter: stable;
 }
+
 
 html,
 body {
