--- a/src/lib/surface/style.css
+++ b/src/lib/surface/style.css
@@ -1,5 +1,7 @@
 [data-h="1"] {
   height: var(--w-height);
+  /* Prevents from flex-shrinking */
+  min-height: var(--w-height);
 }
 
 [data-w="1"] {
@@ -51,7 +53,6 @@
 .w-clickable.w-outlined:not(:disabled):active,
 .w-clickable.w-plain:not(:disabled):active {
   filter: brightness(0.89);
-  transition: filter 0.2s ease-in-out;
 }
 
 .w-clickable.w-outlined:not(:disabled):hover,
@@ -118,18 +119,22 @@
   --w-font-size: 2rem;
 }
 
+.w-txt--lg,
 .w-txt--heading.w-txt--sm {
   --w-font-size: 1rem;
 }
 
+.w-txt--xl,
 .w-txt--heading.w-txt--md {
   --w-font-size: 1.125rem;
 }
 
+.w-txt--xx,
 .w-txt--heading.w-txt--lg {
   --w-font-size: 1.25rem;
 }
 
+.w-txt--ss,
 .w-txt--xs {
   --w-font-size: 0.75rem;
 }
@@ -139,15 +144,7 @@
 }
 
 .w-txt--md {
-  --w-font-size: 14.4px;
-}
-
-.w-txt--lg {
-  --w-font-size: 1rem;
-}
-
-.w-txt--xl {
-  --w-font-size: 1.125rem;
+  --w-font-size: 0.875rem;
 }
 
 .bold {
