--- a/src/lib/checkbox/style.css
+++ b/src/lib/checkbox/style.css
@@ -15,10 +15,12 @@
   box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
 }
 
-.w-checkbox .w-checkbox__thumb * {
+.w-checkbox__thumb__indicator {
+  height: 100%;
   opacity: 0;
+  width: 100%;
 }
 
-.w-checkbox input:checked+.w-checkbox__thumb * {
+.w-checkbox input:checked+.w-checkbox__thumb .w-checkbox__thumb__indicator {
   opacity: 1;
 }
