--- a/src/lib/checkbox/style.css
+++ b/src/lib/checkbox/style.css
@@ -11,7 +11,7 @@
   flex-shrink: 0;
 }
 
-.w-checkbox:hover input:not(:checked)+.w-checkbox__thumb {
+.w-checkbox:hover input:not(:disabled)+.w-checkbox__thumb {
   box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
 }
 
