--- a/src/lib/input/style.css
+++ b/src/lib/input/style.css
@@ -13,10 +13,10 @@
 .w-input.w-neutral.w-outlined,
 .w-input.w-neutral.w-soft,
 .w-input.w-neutral.w-plain {
-  color: var(--color-neutral-8);
+  color: var(--color-neutral-9);
 }
 
-.w-input.w-plain.w-primary {
+/* .w-input.w-plain.w-primary {
   background-color: var(--color-primary-0);
 }
 
@@ -36,7 +36,7 @@
 
 .w-input.w-plain.w-warning {
   background-color: var(--color-warning-0);
-}
+} */
 
 .w-input:focus-within:not(.w-solid):not(.w-neutral) {
   box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
