--- a/src/lib/input/style.css
+++ b/src/lib/input/style.css
@@ -16,28 +16,6 @@
   color: var(--color-neutral-9);
 }
 
-/* .w-input.w-plain.w-primary {
-  background-color: var(--color-primary-0);
-}
-
-.w-input.w-plain.w-neutral,
-.w-input.w-plain.w-black,
-.w-input.w-plain.w-white {
-  background-color: var(--color-neutral-0);
-}
-
-.w-input.w-plain.w-success {
-  background-color: var(--color-success-0);
-}
-
-.w-input.w-plain.w-danger {
-  background-color: var(--color-danger-0);
-}
-
-.w-input.w-plain.w-warning {
-  background-color: var(--color-warning-0);
-} */
-
 .w-input:focus-within:not(.w-solid):not(.w-neutral) {
   box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
 }
@@ -87,19 +65,8 @@ input.w-input[type="number"],
 }
 
 ::-webkit-input-placeholder {
-  color: var(--w-color-bg);
-}
-
-::-moz-placeholder {
-  color: var(--w-color-bg);
-}
-
-::-ms-placeholder {
-  color: var(--w-color-bg);
-}
-
-::placeholder {
-  color: var(--w-color-bg);
+  color: var(--w-color-text);
+  opacity: 0.5;
 }
 
 .w-input__prefix,
