--- a/src/lib/select/style.css
+++ b/src/lib/select/style.css
@@ -6,43 +6,17 @@
   overflow-x: hidden
 }
 
-.w-select__combobox.w-plain.w-primary {
-  background-color: var(--color-primary-0);
+.w-select__combobox.w-soft[aria-expanded='true'],
+.w-select__combobox.w-plain[aria-expanded='true'] {
+  box-shadow: inset 0 0 0 1px var(--w-color-text);
+  border-color: var(--w-color-text);
 }
 
-.w-select__combobox.w-plain.w-neutral,
-.w-select__combobox.w-plain.w-black,
-.w-select__combobox.w-plain.w-white {
-  background-color: var(--color-neutral-0);
-}
-
-.w-select__combobox.w-plain.w-success {
-  background-color: var(--color-success-0);
-}
-
-.w-select__combobox.w-plain.w-danger {
-  background-color: var(--color-danger-0);
-}
-
-.w-select__combobox.w-plain.w-warning {
-  background-color: var(--color-warning-0);
-}
-
-.w-select__combobox.w-soft,
-.w-select__combobox.w-plain {
-  border: 1px solid transparent;
-}
-
-.w-select__combobox.w-soft:focus-within,
-.w-select__combobox.w-plain:focus-within {
-  border-color: var(--w-color-bg);
-}
-
-.w-select:focus-within .w-select__combobox.w-neutral {
+.w-select__combobox.w-neutral[aria-expanded='true'] {
   --w-color-bg: var(--color-primary-6) !important;
 }
 
-.w-select:focus-within .w-select__combobox:not(.w-solid) {
+.w-select__combobox.w-outlined[aria-expanded='true'] {
   box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
 }
 
@@ -50,12 +24,8 @@
   opacity: 0.5;
 }
 
-/* .w-select:focus-within .w-select__combobox,
-.w-select__combobox[aria-expanded='true'] {
-  box-shadow: inset 0 0 0 0.5px var(--color-primary);
-} */
-
 .w-select__combobox__icon {
+  margin-left: auto;
   transition: transform 0.1s ease-in-out;
   opacity: 0.5;
 }
