--- a/src/lib/checkbox/style.css
+++ b/src/lib/checkbox/style.css
@@ -12,7 +12,7 @@
 }
 
 .w-checkbox:hover input:not(:disabled)+.w-checkbox__thumb {
-  box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
+  box-shadow: inset 0 0 0 0.5px var(--w-clr-bg);
 }
 
 .w-checkbox__thumb__indicator {
