--- a/src/lib/input/style.css
+++ b/src/lib/input/style.css
@@ -17,7 +17,7 @@
 }
 
 .w-input:focus-within:not(.w-solid):not(.w-neutral) {
-  box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
+  box-shadow: inset 0 0 0 0.5px var(--w-clr-bg);
 }
 
 .w-input.w-neutral:not(.w-solid):focus-within {
@@ -26,7 +26,7 @@
 }
 
 .w-input.w-solid.w-neutral:focus-within {
-  --w-color-bg: var(--color-primary-6) !important;
+  --w-clr-bg: var(--color-primary-6) !important;
 }
 
 .w-input.w-soft,
@@ -36,7 +36,7 @@
 
 .w-input.w-soft:focus-within,
 .w-input.w-plain:focus-within {
-  border-color: var(--w-color-bg);
+  border-color: var(--w-clr-bg);
 }
 
 .w-input__input {
@@ -65,7 +65,7 @@ input.w-input[type="number"],
 }
 
 ::-webkit-input-placeholder {
-  color: var(--w-color-text);
+  color: var(--w-clr-fg);
   opacity: 0.5;
 }
 
