--- a/src/lib/radio/style.css
+++ b/src/lib/radio/style.css
@@ -28,11 +28,11 @@
 }
 
 .w-radio:hover input:not(:checked)+.w-radio__thumb {
-  box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
+  box-shadow: inset 0 0 0 0.5px var(--w-clr-bg);
 }
 
 .w-radio:not(.w-radio--with-indicator) .w-radio__thumb::after {
-  background-color: var(--w-color-text);
+  background-color: var(--w-clr-fg);
   border-radius: inherit;
   content: '';
   display: block;
