--- a/src/lib/surface/style.css
+++ b/src/lib/surface/style.css
@@ -1,31 +1,9 @@
 [data-h="1"] {
-  height: var(--w-height);
-  /* Prevents from flex-shrinking */
-  min-height: var(--w-height);
+  height: var(--w-h);
 }
 
 [data-w="1"] {
-  width: var(--w-width);
-}
-
-.w-solid {
-  background-color: var(--w-color-bg);
-}
-
-.w-soft,
-.w-mixed {
-  background-color: var(--w-color-bg-soft);
-}
-
-.w-plain,
-.w-none,
-.w-outlined {
-  background-color: inherit;
-}
-
-.w-outlined,
-.w-mixed {
-  border: 1px solid var(--w-color-bg);
+  width: var(--w-w);
 }
 
 .w-clickable {
@@ -34,9 +12,9 @@
 
 .w-clickable:disabled,
 .WuiInput--disabled {
-  --w-color-bg: var(--color-neutral-2) !important;
-  --w-color-bg-soft: var(--color-neutral-2) !important;
-  --w-color-text: var(--color-neutral-6) !important;
+  --w-clr-bg: var(--color-neutral-2) !important;
+  --w-clr-bg-soft: var(--color-neutral-2) !important;
+  --w-clr-fg: var(--color-neutral-6) !important;
   cursor: default;
   pointer-events: none;
 }
@@ -61,7 +39,27 @@
 .w-clickable.w-plain:not(:disabled):focus-visible,
 .w-clickable.w-none:not(:disabled):hover,
 .w-clickable.w-none:not(:disabled):focus-visible {
-  background-color: var(--w-color-bg-soft);
+  background-color: var(--w-clr-bg-soft);
+}
+
+.w-solid {
+  background-color: var(--w-clr-bg);
+}
+
+.w-soft,
+.w-mixed {
+  background-color: var(--w-clr-bg-soft);
+}
+
+.w-plain,
+.w-none,
+.w-outlined {
+  background-color: inherit;
+}
+
+.w-outlined,
+.w-mixed {
+  border: 1px solid var(--w-clr-bg);
 }
 
 .w-rounded {
@@ -78,83 +76,4 @@
 
 .w-sharp {
   border-radius: 0 !important;
-}
-
-.w-txt {
-  color: var(--w-color-text);
-  font-size: var(--w-font-size, 1rem);
-  overflow-wrap: break-word;
-  text-decoration: none;
-}
-
-.w-txt--a:hover {
-  text-decoration: underline;
-}
-
-.w-txt--align-left {
-  text-align: left;
-}
-
-.w-txt--align-center {
-  text-align: center;
-}
-
-.w-txt--align-right {
-  text-align: right;
-}
-
-.w-txt--align-justify {
-  text-align: justify;
-}
-
-.w-txt--title.w-txt--sm {
-  --w-font-size: 1.5rem;
-}
-
-.w-txt--title.w-txt--md {
-  --w-font-size: 1.75rem;
-}
-
-.w-txt--title.w-txt--lg {
-  --w-font-size: 2rem;
-}
-
-.w-txt--lg,
-.w-txt--heading.w-txt--sm {
-  --w-font-size: 1rem;
-}
-
-.w-txt--xl,
-.w-txt--heading.w-txt--md {
-  --w-font-size: 1.125rem;
-}
-
-.w-txt--xx,
-.w-txt--heading.w-txt--lg {
-  --w-font-size: 1.25rem;
-}
-
-.w-txt--ss,
-.w-txt--xs {
-  --w-font-size: 0.75rem;
-}
-
-.w-txt--sm {
-  --w-font-size: 0.8125rem;
-}
-
-.w-txt--md {
-  --w-font-size: 0.875rem;
-}
-
-.bold {
-  font-weight: 500;
-}
-
-.italic {
-  font-style: italic;
-}
-
-.underline {
-  text-decoration: underline;
 }
