--- a/src/lib/textarea/style.css
+++ b/src/lib/textarea/style.css
@@ -61,7 +61,7 @@
 }
 
 .w-textarea:focus-within:not(.w-solid):not(.w-neutral) {
-  box-shadow: inset 0 0 0 0.5px var(--w-color-bg);
+  box-shadow: inset 0 0 0 0.5px var(--w-clr-bg);
 }
 
 .w-textarea.w-neutral:not(.w-solid):focus-within {
@@ -70,7 +70,7 @@
 }
 
 .w-textarea.w-solid.w-neutral:focus-within {
-  --w-color-bg: var(--color-primary-5) !important;
+  --w-clr-bg: var(--color-primary-5) !important;
 }
 
 .w-textarea.w-soft,
@@ -80,7 +80,7 @@
 
 .w-textarea.w-soft:focus-within,
 .w-textarea.w-plain:focus-within {
-  border-color: var(--w-color-bg);
+  border-color: var(--w-clr-bg);
 }
 
 .w-textarea__input {
