fix: add search icon to search input and hide clear icon when no value

--- a/src/lib/select/style.css
+++ b/src/lib/select/style.css
@@ -34,3 +34,9 @@
   opacity: 1;
   transform: rotate(-180deg);
 }
+
+.w-select__text-wrapper {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
