--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -104,6 +104,8 @@
   scrollbar-width: thin;
   scrollbar-gutter: stable;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 ::-webkit-scrollbar {
