--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Inter";
+  src: url(https://cdn.watfoe.com/fonts/Inter.ttf) format("truetype");
+}
+
 :root {
   --color-primary-0: #F7FBFD;
   --color-primary-1: #e6f4fa;
@@ -83,20 +88,8 @@
 * {
   border: 0;
   box-sizing: border-box;
-  font-family: ui-sans-serif,
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    'Helvetica Neue',
-    Arial,
-    'Noto Sans',
-    sans-serif,
-    'Apple Color Emoji',
-    'Segoe UI Emoji',
-    'Segoe UI Symbol',
-    'Noto Color Emoji';
+  font-family: Inter, sans-serif;
+  font-optical-sizing: auto;
   padding: 0;
   margin: 0;
   outline: none;
@@ -104,8 +97,6 @@
   scrollbar-width: thin;
   scrollbar-gutter: stable;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 ::-webkit-scrollbar {
